<resources>
    <string name="app_name">drugs</string>
    <string name="act_login">登录</string>
    <string name="act_register">注册</string>
    <string name="act_login_username">请输入手机号</string>
    <string name="act_login_password">请输入密码</string>
    <string name="act_login_forget_password">忘记密码？</string>
    <string name="act_register_phone">请输入手机号</string>
    <string name="act_register_fetch_captcha">获取验证码</string>
    <string name="act_register_captcha">请输入验证码</string>
    <string name="act_register_password">设置密码</string>
    <string name="act_register_password_again">确认密码</string>
    <string name="act_register_nickname">请输入昵称</string>
    <string name="act_register_department">请选择院系</string>
    <string name="act_register_sex">请选择性别</string>
    <string name="act_forget_password_captcha">请输入手机收到的验证码</string>
    <string name="act_random_code_captcha">随机验证码</string>
    <string name="next">下一步</string>
    <string name="entel">确认</string>
    <string name="act_forget_passwrod_toolbar_title">找回密码</string>
    <string name="act_reset_password_toolbar_title">重设密码</string>
    <string name="frag_user_login"><![CDATA[请点击登录>]]></string>
    <string name="loading_progress_bar_title">加载中...</string>
    <string name="pushing_progress_bar_title">发布中...</string>
    <string name="operating_progress_bar_title">操作中...</string>
    <string name="Modifying_progress_bar_title">修改中...</string>
    <string name="Login_progress_bar_title">登录中...</string>
    <string name="register_progress_bar_title">注册中...</string>
</resources>
