<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:background="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar">
        </include>
        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@color/colorWhite"
                android:hint="@string/act_register_phone"
                android:padding="10dp"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_fetch_captcha"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/act_register_fetch_captcha"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"/>
        </LinearLayout>
        <EditText
            android:id="@+id/et_captcha"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/act_forget_password_captcha"
            android:padding="10dp"
            android:textSize="16sp"/>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/et_random_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@color/colorWhite"
            android:hint="@string/act_random_code_captcha"
            android:padding="10dp"
            android:textSize="16sp"/>
        <ImageButton
            android:id="@+id/ib_random_code"
            android:layout_width="136dp"
            android:layout_height="46dp"
            android:background="@color/colorWhite"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            />
    </LinearLayout>
    <include layout="@layout/progress_bar"></include>
</RelativeLayout>